# teste-momento2-edital-ciencia-de-dados

./: README.md  dicionario.csv  pyproject.toml  requirements.txt
data/processed/: dataset_teste_selecao.csv  dicionario.csv
data/raw/: dataset_teste_selecao.csv
models/: model1.pkl  model2.pkl
notebooks/: 02 - Modelagem.ipynb
notebooks/src/: misc.py
notebooks/src/data/: prepare.py  visualize.py
