[tool.poetry]
name = "esp"
version = "0.1.0"
description = ""
authors = ["Madson Dias <madsonddias@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
numpy = "^1.22.0"
jupyterlab = "^3.2.7"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
plotly = "^5.5.0"
slugify = "^0.0.1"
Unidecode = "^1.3.2"
ipywidgets = "^7.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
